objects/SCP_Certa_GC__Asociacion_de_producto_con_proyecto__c.object
<CustomObject>
    <fields>
        <fullName>SCP_Certa_GC__Cantidad__c</fullName>
        <label>Cantidad</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Moneda__c</fullName>
        <label>Moneda</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Monto_Mensual__c</fullName>
        <label>Monto Mensual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Monto_One__c</fullName>
        <label>Monto One</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Plazo_contrato__c</fullName>
        <label>Plazo contrato</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__PrecioFinal__c</fullName>
        <formula>iF( SCP_Certa_GC__Moneda__c = &apos;USD&apos;, (( SCP_Certa_GC__Monto_One__c + ( SCP_Certa_GC__Plazo_contrato__c * SCP_Certa_GC__Monto_Mensual__c))*  SCP_Certa_GC__Proyecto__r.SCP_Certa_GC__Oportunidad__r.SCP_Certa_GC__Dolar_Buget__c),( SCP_Certa_GC__Monto_One__c + (SCP_Certa_GC__Plazo_contrato__c * SCP_Certa_GC__Monto_Mensual__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Precio Final</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Producto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Producto</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Asociaciones de producto con proyecto</relationshipLabel>
        <relationshipName>Asociaciones_de_producto_con_proyecto</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Proyecto__c</fullName>
        <label>Proyecto</label>
        <referenceTo>SCP_Certa_GC__Proyecto__c</referenceTo>
        <relationshipLabel>Asociaciones de producto con proyecto</relationshipLabel>
        <relationshipName>Asociaciones_de_producto_con_proyecto</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__TMI__c</fullName>
        <label>TMI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Asociación de producto con proyecto</label>
    <listViews>
        <fullName>SCP_Certa_GC__All</fullName>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <label>Nombre de Asociación de producto con pro</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asociaciones de producto con proyecto</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>